--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,13 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-    color: #000;
-    text-shadow:
-        -1px -1px 0 #fff,  /* white shadow at the top left */
-         1px -1px 0 #fff,  /* white shadow at the top right */
-        -1px  1px 0 #fff,  /* white shadow at the bottom left */
-         1px  1px 0 #fff; 
+    color: #fff;
 }
 
 body {
@@ -16,39 +10,19 @@ body {
     overflow: hidden;
 }
 
-.container {
+.mainContainer {
     height: 100vh;
     overflow: auto;
-    scrollbar-width:none;
+    scrollbar-width: none;
     position: relative;
     background-color: #000;
 }
 
-.banner {
-    height: 100vh;
-    background: url(../Images/bg.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.navbar{
-height: 80px;
-width: 100%;
-padding: 30px 30px;
-position: fixed;
-display: flex;
-align-items: center;
-justify-content: space-between;
-z-index: 2;
-transition: all 0.3s ease;
-background: linear-gradient(180deg, rgba(0, 0, 0, 0.8000) 0.000%, rgba(0, 0, 0, 0.7889) 8.333%, rgba(0, 0, 0, 0.7556) 16.67%, rgba(0, 0, 0, 0.7000) 25.00%, rgba(0, 0, 0, 0.6222) 33.33%, rgba(0, 0, 0, 0.5222) 41.67%, rgba(0, 0, 0, 0.4000) 50.00%, rgba(0, 0, 0, 0.2778) 58.33%, rgba(0, 0, 0, 0.1778) 66.67%, rgba(0, 0, 0, 0.1000) 75.00%, rgba(0, 0, 0, 0.04444) 83.33%, rgba(0, 0, 0, 0.01111) 91.67%, rgba(0, 0, 0, 0.000) 100.0%);
-}
-
-.menu{
+.menuContainer {
     height: 100%;
     background-color: #fff;
     width: 30%;
-    position:  fixed;
+    position: fixed;
     top: 0;
     z-index: 4;
     display: flex;
@@ -60,20 +34,20 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 0.8000) 0.000%, rgba(0, 0, 0, 
     transition: all 0.3s ease;
 }
 
-.menu.active{
+.menuContainer.active {
     left: 0;
 }
 
-.menu button{
+#closeMenuContainerButton {
     position: absolute;
     top: 30px;
     left: 20px;
     background-color: transparent;
-    border:none;
+    border: none;
     font-size: 1.4em;
 }
 
-.menu ul{
+.menuContainer ul {
     list-style-type: none;
     height: 80%;
     display: flex;
@@ -82,16 +56,16 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 0.8000) 0.000%, rgba(0, 0, 0, 
     gap: 60px;
 }
 
-.menu ul li a{
+.menuContainer ul li.active {
+    font-weight: bolder;
+}
+
+.menuContainer ul li a {
     text-decoration: none;
     font-size: 1.2em;
 }
 
-.menu ul li.active{
-    font-weight: bolder;
-}
-
-.search-container{
+.searchContainer {
     height: 100%;
     width: 100%;
     left: 0;
@@ -102,23 +76,21 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 0.8000) 0.000%, rgba(0, 0, 0, 
     transition: all 0.3s ease;
 }
 
-.search-container #close-search{
+.searchContainer.active {
+    top: 0;
+}
+
+#closeSearchContainerButton {
     position: absolute;
     top: 10px;
     right: 20px;
     background-color: transparent;
-    border:none;
+    border: none;
     font-size: 1.4em;
 
 }
 
-.search-container button{
-    background-color: transparent;
-    border:none;
-    font-size: 1.4em;
-}
-
-.search-container input{
+.search-container input {
     width: 80%;
     margin-top: 50px;
     margin-inline: 20px;
@@ -129,29 +101,46 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 0.8000) 0.000%, rgba(0, 0, 0, 
     border-radius: 5px;
 }
 
-.search-container.active{
-    top: 0;
+#searchButton {
+    background-color: transparent;
+    border: none;
+    font-size: 1.4em;
 }
 
+.navbarContainer {
+    height: 80px;
+    width: 100%;
+    padding: 30px 30px;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 2;
+    transition: all 0.3s ease;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.8000) 0.000%, rgba(0, 0, 0, 0.7889) 8.333%, rgba(0, 0, 0, 0.7556) 16.67%, rgba(0, 0, 0, 0.7000) 25.00%, rgba(0, 0, 0, 0.6222) 33.33%, rgba(0, 0, 0, 0.5222) 41.67%, rgba(0, 0, 0, 0.4000) 50.00%, rgba(0, 0, 0, 0.2778) 58.33%, rgba(0, 0, 0, 0.1778) 66.67%, rgba(0, 0, 0, 0.1000) 75.00%, rgba(0, 0, 0, 0.04444) 83.33%, rgba(0, 0, 0, 0.01111) 91.67%, rgba(0, 0, 0, 0.000) 100.0%);
+}
 
-.navbar button{
+.navbarContainer.active {
+    background-color: #000;
+}
+
+.navbarContainerButton {
     font-size: 1.5em;
     color: #fff;
     background-color: transparent;
     border: none;
 }
 
-.navbar.active{
-    background-color: #000;
+.bannerContainer {
+    height: 100vh;
+    position: relative;
+    background: url(../Images/bg.jpg);
+    background-position: center;
+    background-size: cover;
 }
-h1,h2{
-    font-family: sans-serif;
-    font-weight: bold;
-}
-h2{
-    font-size: 1.7em;
-}
-.banner-cover {
+
+.bannerContainer::before {
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
@@ -161,131 +150,4 @@ h2{
     align-items: center;
     justify-content: center;
     background-image: linear-gradient(360deg, rgba(0, 0, 0, 0.9000) 0.000%, rgba(0, 0, 0, 0.8965) 8.500%, rgba(0, 0, 0, 0.8861) 17.00%, rgba(0, 0, 0, 0.8688) 25.50%, rgba(0, 0, 0, 0.8444) 34.00%, rgba(0, 0, 0, 0.8132) 42.50%, rgba(0, 0, 0, 0.7750) 51.00%, rgba(0, 0, 0, 0.7368) 59.50%, rgba(0, 0, 0, 0.7056) 68.00%, rgba(0, 0, 0, 0.6813) 76.50%, rgba(0, 0, 0, 0.6639) 85.00%, rgba(0, 0, 0, 0.6535) 93.50%, rgba(0, 0, 0, 0.6500) 102.0%);
-}
-
-.banner-cover h1{
-    width: 50%;
-    text-align: center;
-    font-family: sans-serif;
-    line-height: 1.5;
-    font-size: 2.5em;
-}
-
-.box{
-
-    position: relative;
-    height: 110px;
-    overflow: hidden;
-}
-
-.trending-section{
-    position: absolute;
-    height: 100%;
-    width: 180%;
-    top: 0;
-    left: -40%;
-    border: 4px solid rgb(229, 9, 20);
-    border-top-left-radius: 50% 100%;
-    border-top-right-radius: 50% 100%;
-    border-bottom: none;
-    background: radial-gradient(50% 500% at 50% -420%, rgba(64, 97, 231, 0.4) 80%, rgba(0, 0, 0, 0.1) 100%), black;
-}
-
-.section{
-    background-color: #000;
-    padding-inline: 50px;
-    color: #fff;
-    padding-bottom: 50px;
-}
-
-
-.slider{
-    height: 270px;
-    margin-top: 20px;
-    background-color: #000;
-    border-radius: 8px;
-    display: flex;
-    overflow: auto;
-    align-items: center;
-    gap: 30px;
-    scrollbar-width: none;
-    padding: 20px;
-    margin-bottom: 50px;
-}
-
-.section-cont:last-child{
-    padding-bottom: 10px;
-}
-
-.card{
-    height: 100%;
-    min-width: 175px;
-    position: relative;
-    border-radius: 10px;
-    transition: all 0.25s ease;
-
-}
-
-.card button{
-    height: 30px;
-    width: 30px;
-    font-size: 20px;
-    font-weight: bold;
-    background-color: #fff;
-    border: none;
-    border-radius: 50%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: none;
-}
-
-.card:hover button{
-    display: block;
-}
-
-.card:hover{
-    transform: scale(1.04);
-}
-
-.card img{
-    height: 100%;
-    width: 100%;
-    border-radius: 10px;
-}
-.card span{
-    color:#000;
-    text-shadow:
-        -1px -1px 0 #fff,  /* white shadow at the top left */
-         1px -1px 0 #fff,  /* white shadow at the top right */
-        -1px  1px 0 #fff,  /* white shadow at the bottom left */
-         1px  1px 0 #fff; 
-         font-size: 4em;
-         font-weight:bolder;
-         font-family: sans-serif;
-    position: absolute;
-    bottom: 10px;
-    left: -9%;
-}
-
-.library-container{
-    padding-top: 100px;
-    padding-bottom: 80px;
-    padding-inline: 60px;
-    background-color: #000;
-    display: flex;
-    gap: 30px;
-    flex-wrap: wrap;
-}
-
-.library-container .card{
-    height: 250px;
-    width: 200px;
-    border-radius: 5px;
-    background-color: #fff;
-}
-
-.library-container .card img{
-    height: 100%;
-    width: 100%;
 }
