--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #fff;
+    font-family: "Poppins";
 }
 
 body {
@@ -10,144 +12,172 @@ body {
     overflow: hidden;
 }
 
-.mainContainer {
+#mainContainer {
     height: 100vh;
     overflow: auto;
     scrollbar-width: none;
-    position: relative;
     background-color: #000;
 }
 
-.menuContainer {
-    height: 100%;
-    background-color: #fff;
-    width: 30%;
+#navbarContainer {
     position: fixed;
     top: 0;
-    z-index: 4;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 40px;
-    left: -50%;
-    transition: all 0.3s ease;
-}
-
-.menuContainer.active {
-    left: 0;
-}
-
-#closeMenuContainerButton {
-    position: absolute;
-    top: 30px;
-    left: 20px;
-    background-color: transparent;
-    border: none;
-    font-size: 1.4em;
-}
-
-.menuContainer ul {
-    list-style-type: none;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 60px;
-}
-
-.menuContainer ul li.active {
-    font-weight: bolder;
-}
-
-.menuContainer ul li a {
-    text-decoration: none;
-    font-size: 1.2em;
-}
-
-.searchContainer {
-    height: 100%;
     width: 100%;
-    left: 0;
-    position: absolute;
-    z-index: 6;
-    background-color: #fff;
-    top: -100%;
-    transition: all 0.3s ease;
-}
-
-.searchContainer.active {
-    top: 0;
-}
-
-#closeSearchContainerButton {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    background-color: transparent;
-    border: none;
-    font-size: 1.4em;
-
-}
-
-.search-container input {
-    width: 80%;
-    margin-top: 50px;
-    margin-inline: 20px;
-    height: 40px;
-    padding-inline: 5px;
-    font-size: 18px;
-    border: 2px solid;
-    border-radius: 5px;
-}
-
-#searchButton {
-    background-color: transparent;
-    border: none;
-    font-size: 1.4em;
-}
-
-.navbarContainer {
-    height: 80px;
-    width: 100%;
-    padding: 30px 30px;
-    position: fixed;
+    padding: 5px 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 2;
-    transition: all 0.3s ease;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.8000) 0.000%, rgba(0, 0, 0, 0.7889) 8.333%, rgba(0, 0, 0, 0.7556) 16.67%, rgba(0, 0, 0, 0.7000) 25.00%, rgba(0, 0, 0, 0.6222) 33.33%, rgba(0, 0, 0, 0.5222) 41.67%, rgba(0, 0, 0, 0.4000) 50.00%, rgba(0, 0, 0, 0.2778) 58.33%, rgba(0, 0, 0, 0.1778) 66.67%, rgba(0, 0, 0, 0.1000) 75.00%, rgba(0, 0, 0, 0.04444) 83.33%, rgba(0, 0, 0, 0.01111) 91.67%, rgba(0, 0, 0, 0.000) 100.0%);
+    z-index: 1;
 }
 
-.navbarContainer.active {
-    background-color: #000;
+#navbarContainer a {
+    text-decoration: none;
 }
 
-.navbarContainerButton {
-    font-size: 1.5em;
+#navbarContainer ul {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    list-style-type: none;
+}
+
+#navbarContainer ul li {
+    padding: 5px 10px;
+    font-size: 1.2rem;
+    border-radius: 4px;
+    cursor: pointer;
+    position: relative;
     color: #fff;
-    background-color: transparent;
-    border: none;
 }
 
-.bannerContainer {
+#navbarMenuContainerButton:hover {
+    color: #000;
+    background-color: #fff;
+}
+
+#navbarMenuContainer {
+    position: absolute;
+    right: 0;
+    border-radius: 4px 0px 4px 4px;
+    background-color: #fff;
+    border-top: 1.5px solid rgb(229, 9, 20);
+    overflow: hidden;
+    padding: 10px 0px;
+    display: none;
+}
+
+#navbarMenuContainer ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    width: 130px;
+}
+
+#navbarMenuContainer ul li {
+    width: 100%;
+    border-radius: 0px;
+    padding: 6px 16px;
+
+    &:hover {
+        background-color: rgb(229, 9, 20);
+    }
+}
+
+#navbarMenuContainer ul li a {
+    font-weight: 600;
+    color: #000;
+    font-size: 14px;
+}
+
+#navbarMenuContainer ul li:hover a {
+    color: #fff;
+}
+
+#navbarMenuContainerButton:hover #navbarMenuContainer {
+    display: block;
+}
+
+#bannerContainer {
     height: 100vh;
     position: relative;
-    background: url(../Images/bg.jpg);
-    background-position: center;
     background-size: cover;
-}
-
-.bannerContainer::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
+    background-position: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(360deg, rgba(0, 0, 0, 0.9000) 0.000%, rgba(0, 0, 0, 0.8965) 8.500%, rgba(0, 0, 0, 0.8861) 17.00%, rgba(0, 0, 0, 0.8688) 25.50%, rgba(0, 0, 0, 0.8444) 34.00%, rgba(0, 0, 0, 0.8132) 42.50%, rgba(0, 0, 0, 0.7750) 51.00%, rgba(0, 0, 0, 0.7368) 59.50%, rgba(0, 0, 0, 0.7056) 68.00%, rgba(0, 0, 0, 0.6813) 76.50%, rgba(0, 0, 0, 0.6639) 85.00%, rgba(0, 0, 0, 0.6535) 93.50%, rgba(0, 0, 0, 0.6500) 102.0%);
+}
+
+#bannerContainer::before {
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(360deg, rgba(0, 0, 0, 0.8500) 3.000%, rgba(0, 0, 0, 0.8465) 11.08%, rgba(0, 0, 0, 0.8361) 19.17%, rgba(0, 0, 0, 0.8187) 27.25%, rgba(0, 0, 0, 0.7944) 35.33%, rgba(0, 0, 0, 0.7632) 43.42%, rgba(0, 0, 0, 0.7250) 51.50%, rgba(0, 0, 0, 0.6868) 59.58%, rgba(0, 0, 0, 0.6556) 67.67%, rgba(0, 0, 0, 0.6313) 75.75%, rgba(0, 0, 0, 0.6139) 83.83%, rgba(0, 0, 0, 0.6035) 91.92%, rgba(0, 0, 0, 0.6000) 100.0%);
+}
+
+#bannerContentContainer {
+    width: 60%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    color: #fff;
+}
+
+#bannerLogoContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#bannerLogoContainer h1 {
+    font-size: 4rem;
+}
+
+#bannerLogoContainer h1 span {
+    color: rgb(229, 9, 20);
+}
+
+#bannerContentContainer h2 {
+    text-align: center;
+    font-size: 22px;
+}
+
+#bannerContentContainer h2 span {
+    font-size: 24px;
+    color: rgb(229, 9, 20);
+}
+
+#curveContainer {
+    box-sizing: border-box;
+    overflow-x: hidden;
+    position: relative;
+    height: 6.25rem;
+    z-index: 1;
+}
+
+#curve {
+    position: absolute;
+    height: 100%;
+    top: 0;
+    border-top-left-radius: 50% 100%;
+    border-top-right-radius: 50% 100%;
+    border-bottom: none;
+    background: radial-gradient(50% 500% at 50% -420%, rgba(64, 97, 231, 0.4) 80%, rgba(0, 0, 0, 0.1) 100%), black;
+}
+
+#curve::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin-top: -.25rem;
+    border-radius: inherit;
+    background: linear-gradient(to right, rgba(33, 13, 22, 1) 16%, rgba(184, 40, 105, 1), rgba(229, 9, 20, 1), rgba(184, 40, 105, 1), rgba(33, 13, 22, 1) 84%);
 }
