--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,472 @@
-.user-link{
-    display: none;
-}
-.user-link:hover{
-    display: block;
-}
-.user:hover + .user-link{
-    display: block;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.navbar-toggler{
-    border-radius: 5px 5px 0px 0px;
-    border: none;
+li {
+  list-style: none;
 }
 
-ul{
-    list-style: none;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-a{
-    text-decoration: none;
-    color: #fff;
+a,
+img,
+svg,
+span,
+input,
+select,
+button,
+textarea,
+ion-icon {
+  display: block;
 }
 
-.navbar-toggler-link{
-    display: none;
-    border-radius: 5px 0px 5px 5px;
-    background-color: #000;
-    color: #fff;
-}
-.navbar-toggler:hover{
-    background-color: #000;
-    color: #fff;
-}
-.navbar-toggler:hover + .navbar-toggler-link{
-    display: block;
-}
-.navbar-toggler-link:hover{
-    display: block;
-
+img {
+  height: auto;
 }
 
-.navbar-toggler-link:hover ~ .navbar-toggler{
-    background-color: #000;
-    color: #fff;
+input,
+select,
+button,
+textarea {
+  background: none;
+  border: none;
+  font: inherit;
 }
 
-.search-cont{
-    position: absolute;
-    top: -100%;
-    width: 100%;
-    height: 100%;
-    transition: all 0.2s ease;
-    z-index: 3;
+input,
+select,
+textarea {
+  width: 100%;
 }
 
-.search-cont.top-height{
-    backdrop-filter: blur(2px);
-    top: 0%;
+button {
+  cursor: pointer;
 }
 
-.search-bar{
-    width: 0;
+ion-icon {
+  pointer-events: none;
 }
 
-.search-btn:hover .search-bar{
-    width: 500px;
+address {
+  font-style: normal;
+}
+
+html {
+  font-family: 'Roboto', sans-serif;
+  font-size: 10px;
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(0, 0%, 47%);
+  font-size: 1.6rem;
+  line-height: 1.6;
+  overflow-x: hidden;
+}
+
+body.active {
+  overflow: hidden;
+}
+
+.container {
+  padding-inline: 15px;
+}
+
+.h1,
+.h2,
+.h3,
+.h4 {
+  font-family: 'Rubik', sans-serif;
+  color: hsl(210, 26%, 7%);
+  line-height: 1.2;
+  letter-spacing: -1px;
+}
+
+.h1,
+.h2 {
+  font-size: 3.2rem;
+}
+
+.h2,
+.h3,
+.h4 {
+  font-weight: 600;
+}
+
+.h3 {
+  font-size: 2.2rem;
+}
+
+.h4 {
+  font-size: 1.8rem;
+}
+
+.btn {
+  background-color: var(--bg-color, hsl(32, 100%, 59%));
+  color: hsl(0, 0%, 100%);
+  font-family: 'Rubik', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 500;
+  height: var(--height, 45px);
+  padding-inline: var(--padding-inline, 35px);
+  transition: 0.25s ease;
+}
+
+.btn-hover {
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.btn-hover::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 20px;
+  width: 1px;
+  height: 1px;
+  transform: translate(-50%, 51%) scale(var(--scale, 1));
+  border-radius: 50%;
+  background-color: hsl(210, 26%, 7%);
+  z-index: -1;
+  transition: 0.5s ease;
+}
+
+.btn-hover:is(:hover, :focus)::after {
+  --scale: 500;
+}
+
+.section {
+  padding-block: 60px;
+}
+
+.section.white {
+  background-color: hsl(38, 44%, 96%);
+}
+
+.section-divider {
+  position: relative;
+}
+
+.section-divider::before,
+.section-divider::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 15px;
+  background-repeat: repeat no-repeat;
+  background-position: bottom;
+}
+
+.section-divider.white::after {
+  background-image: url("../Images/shape-white.png");
+}
+
+.section-divider.gray::after {
+  background-image: url("../Images/shape-grey.png");
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.has-scrollbar {
+  display: flex;
+  gap: 10px;
+  overflow-x: auto;
+  scroll-snap-type: inline mandatory;
+  padding-block-end: 40px;
+}
+
+.has-scrollbar::-webkit-scrollbar {
+  height: 12px;
+}
+
+.has-scrollbar::-webkit-scrollbar-button {
+  width: calc(25% - 40px);
+}
+
+.has-scrollbar::-webkit-scrollbar-track {
+  outline: 2px solid hsl(32, 100%, 59%);
+  background-color: hsl(0, 0%, 93%);
+  border-radius: 50px;
+}
+
+.has-scrollbar::-webkit-scrollbar-thumb {
+  border: 3px solid hsl(0, 0%, 93%);
+  background-color: hsl(32, 100%, 59%);
+  border-radius: 50px;
+}
+
+.has-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(32, 100%, 49%);
+}
+
+.section-title>.span {
+  display: inline-block;
+  color: hsl(32, 100%, 59%);
+}
+
+.abs-img {
+  position: absolute;
+  transform: scale(1);
+}
+
+.scale-up-anim {
+  animation: scaleUp 1s linear infinite alternate;
+}
+
+@keyframes scaleUp {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.05);
+  }
+}
+
+.section-subtitle {
+  color: hsl(3, 90%, 55%);
+  font-family: 'Rubik', sans-serif;
+  text-align: center;
+  font-weight: 500;
+}
+
+.badge {
+  position: absolute;
+  background: var(--bg-color, hsl(3, 90%, 55%));
+  color: hsl(0, 0%, 100%);
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: var(--padding-block, 2px) 15px;
+}
+
+.rating-wrapper {
+  display: flex;
+  gap: 5px;
+  color: hsl(32, 100%, 59%);
+}
+
+.header-btn-group .btn {
+  display: none;
+}
+
+.header {
+  --color: hsl(0, 0%, 100%);
+  --btn-color: hsl(23, 61%, 86%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-block: 20px;
+  border-block-end: 1px solid hsla(23, 61%, 86%, 0.2);
+  z-index: 4;
+}
+
+.header.active {
+  --color: hsl(210, 26%, 7%);
+  --btn-color: hsl(210, 26%, 7%);
+  position: fixed;
+  top: -86px;
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 0 1px 4px hsla(0, 0%, 0%, 0.2);
+  animation: slideIn 0.5s ease-out forwards;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(0);
+  }
+
+  100% {
+    transform: translateY(100%);
+  }
+}
+
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  color: var(--color);
+  font-family: 'Rubik', sans-serif;
+  font-size: 2.8rem;
+  font-weight: 700;
+  letter-spacing: -2px;
+}
+
+.logo .span {
+  display: inline-block;
+  color: hsl(32, 100%, 59%);
+}
+
+.header-btn-group {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.search-btn {
+  color: var(--btn-color);
+  font-size: 20px;
+}
+
+.search-btn ion-icon {
+  --ionicon-stroke-width: 50px;
+}
+
+.nav-toggle-btn {
+  display: grid;
+  gap: 4px;
+}
+
+.line {
+  width: 10px;
+  height: 3px;
+  background-color: var(--btn-color);
+  border-radius: 5px;
+  transition: 0.25s ease;
+}
+
+.line.middle {
+  width: 20px;
+}
+
+.line.bottom {
+  margin-left: auto;
+}
+
+.nav-toggle-btn.active .line.top {
+  transform: translate(1px, 3px) rotate(45deg);
+}
+
+.nav-toggle-btn.active .line.middle {
+  transform: rotate(-45deg);
+}
+
+.nav-toggle-btn.active .line.bottom {
+  transform: translate(-1px, -3px) rotate(45deg);
+}
+
+.navbar {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(100% - 30px);
+  background-color: hsl(0, 0%, 100%);
+  padding-inline: 20px;
+  box-shadow: 0 1px 4px hsla(0, 0%, 0%, 0.2);
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+  transition: 0.25s ease;
+}
+
+.navbar.active {
+  height: 236px;
+  visibility: visible;
+}
+
+.navbar-list {
+  margin-block: 10px;
+}
+
+.nav-item.active a {
+  color: hsl(28, 100%, 58%);
+}
+
+.nav-item:not(:last-child) {
+  border-block-end: 1px solid hsla(0, 0%, 0%, 0.04);
+}
+
+.navbar-link {
+  color: hsl(210, 26%, 7%);
+  font-size: 1.4rem;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 500;
+  padding: 10px 15px;
+  transition: 0.25s ease;
+}
+
+.navbar-link:is(:hover, :focus) {
+  color: hsl(28, 100%, 58%);
+}
+
+.search-container {
+  position: fixed;
+  top: -60%;
+  left: 0;
+  width: 100%;
+  height: 110%;
+  background-color: hsla(0, 0%, 0%, 0.95);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-inline: 15px;
+  z-index: 5;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s ease;
+}
+
+.search-container.active {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(50%);
+}
+
+.search-box {
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+}
+
+.search-input {
+  color: hsl(0, 0%, 87%);
+  font-size: 3rem;
+  padding: 20px 15px;
+  padding-inline-end: 70px;
+}
+
+.search-input::placeholder {
+  color: hsl(0, 0%, 60%);
+}
+
+.search-input::-webkit-search-cancel-button {
+  display: none;
+}
+
+.search-submit {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 15px;
+  color: hsl(0, 0%, 27%);
+  font-size: 4rem;
+  transition: 0.25s ease;
+}
+
+.search-submit:is(:hover, :focus) {
+  color: hsl(0, 0%, 87%);
+}
+
+.search-close-btn {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  cursor: url("../images/close.png"), auto;
 }
