--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -144,120 +144,6 @@ body.active {
   --scale: 500;
 }
 
-.section {
-  padding-block: 60px;
-}
-
-.section.white {
-  background-color: hsl(38, 44%, 96%);
-}
-
-.section-divider {
-  position: relative;
-}
-
-.section-divider::before,
-.section-divider::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 15px;
-  background-repeat: repeat no-repeat;
-  background-position: bottom;
-}
-
-.section-divider.white::after {
-  background-image: url("../Images/shape-white.png");
-}
-
-.section-divider.gray::after {
-  background-image: url("../Images/shape-grey.png");
-}
-
-.w-100 {
-  width: 100%;
-}
-
-.has-scrollbar {
-  display: flex;
-  gap: 10px;
-  overflow-x: auto;
-  scroll-snap-type: inline mandatory;
-  padding-block-end: 40px;
-}
-
-.has-scrollbar::-webkit-scrollbar {
-  height: 12px;
-}
-
-.has-scrollbar::-webkit-scrollbar-button {
-  width: calc(25% - 40px);
-}
-
-.has-scrollbar::-webkit-scrollbar-track {
-  outline: 2px solid hsl(32, 100%, 59%);
-  background-color: hsl(0, 0%, 93%);
-  border-radius: 50px;
-}
-
-.has-scrollbar::-webkit-scrollbar-thumb {
-  border: 3px solid hsl(0, 0%, 93%);
-  background-color: hsl(32, 100%, 59%);
-  border-radius: 50px;
-}
-
-.has-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: hsl(32, 100%, 49%);
-}
-
-.section-title>.span {
-  display: inline-block;
-  color: hsl(32, 100%, 59%);
-}
-
-.abs-img {
-  position: absolute;
-  transform: scale(1);
-}
-
-.scale-up-anim {
-  animation: scaleUp 1s linear infinite alternate;
-}
-
-@keyframes scaleUp {
-  0% {
-    transform: scale(1);
-  }
-
-  100% {
-    transform: scale(1.05);
-  }
-}
-
-.section-subtitle {
-  color: hsl(3, 90%, 55%);
-  font-family: 'Rubik', sans-serif;
-  text-align: center;
-  font-weight: 500;
-}
-
-.badge {
-  position: absolute;
-  background: var(--bg-color, hsl(3, 90%, 55%));
-  color: hsl(0, 0%, 100%);
-  font-size: 1.2rem;
-  font-weight: 600;
-  padding: var(--padding-block, 2px) 15px;
-}
-
-.rating-wrapper {
-  display: flex;
-  gap: 5px;
-  color: hsl(32, 100%, 59%);
-}
-
 .header-btn-group .btn {
   display: none;
 }
@@ -324,7 +210,7 @@ body.active {
   font-size: 20px;
 }
 
-.search-btn ion-icon {
+.search-btn i {
   --ionicon-stroke-width: 50px;
 }
 
@@ -469,4 +355,45 @@ body.active {
   inset: 0;
   z-index: -1;
   cursor: url("../images/close.png"), auto;
+}
+
+
+@media (min-width: 480px) {
+  .header-btn-group .btn {
+    display: block;
+    --bg-color: hsl(28, 100%, 58%);
+    ;
+  }
+}
+
+@media (min-width: 992px) {
+  .nav-toggle-btn {
+    display: none;
+  }
+
+  .header .container {
+    gap: 20px;
+  }
+
+  .navbar,
+  .navbar.active {
+    all: unset;
+    margin-inline-start: auto;
+  }
+
+  .navbar-list {
+    margin-block: 0;
+    display: flex;
+    gap: 5px;
+  }
+
+  .nav-item:not(:last-child) {
+    border-block-end: none;
+  }
+
+  .navbar-link {
+    --fs-4: 1.5rem;
+    color: var(--btn-color);
+    letter-spacing: -0.5px;
+  }
 }
